bee-common/bee-common-derive/tests/packable/fail/duplicated_tag_enum.stderr
error: The tag `0` is already being used for the `None` variant.
  --> $DIR/duplicated_tag_enum.rs:14:22
   |
14 |     #[packable(tag = 0)]
   |                      ^
